# golink

./: .bazelrc  .gitignore  .markdownlint.json  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  go_link.bzl  golink.bzl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: release_prep.bash
.github/workflows/: ci.yml  lint.yml  release.yml  upstream-check.yml
bazel/go/: def.bzl  repos.bzl
gazelle/go_link/: BUILD.bazel  proto_gen.go
proto/: proto.bzl
