"""go_link - Bazel module for linking Go generated sources"""

module(
    name = "go_link",
    version = "2.0.1",
    compatibility_level = 1,
)

# Core Bazel dependencies
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

bazel_dep(name = "gazelle", version = "0.41.0")
# bazel_dep(name = "protobuf", version = "29.2")

# bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# Go dependencies for the gazelle plugin
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps.from_file(go_mod = "//:go.mod")
