load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_link",
    srcs = ["proto_gen.go"],
    importpath = "github.com/zaccari/golink/gazelle/go_link",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

# Alias for backward compatibility
alias(
    name = "go_default_library",
    actual = ":go_link",
    visibility = ["//visibility:public"],
)
